Add Repository layer for Cart, Quantity Control for Product and Add to card functionality(service, Controller and Javascript)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.MySQL8Dialect
-                format_sql: false
-        show-sql: false
+                format_sql: true
+        show-sql: true
     security:
         oauth2:
             client:
