--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
                 dialect: org.hibernate.dialect.MySQL8Dialect
                 format_sql: false
         show-sql: false
+        open-in-view: false
     security:
         oauth2:
             client:
