--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.3</version>
+				<configuration>
+					<to>
+						<image>sudhanshu00i/shopme-customer:local</image>
+					</to>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
